ARBEEIT: Prevent podcast header img from stretching

--- a/sass/web.arbeit/modules/article/_article-heading--podcast.sass
+++ b/sass/web.arbeit/modules/article/_article-heading--podcast.sass
@@ -34,6 +34,7 @@
 				margin-left: auto
 				margin-right: auto
 				max-height: 200px
+				width: auto // override .scaled-image to avoid stretching
 	&__podcast-player
 		margin-bottom: remify(30px)
 		max-height: remify(65px) // prevent jumping layout
